tests/defaultAddCapabilities/gatekeeper.yaml
apiVersion: mutations.gatekeeper.sh/v1alpha1
kind: Assign
metadata:
  name: k8spspcapabilities
spec:
  applyTo:
  - groups: [""]
    kinds: ["Pod"]
    versions: ["v1"]
  location: "spec.containers[name:*].securityContext.capabilities.add"
  parameters:
    assign:
      value: ["something"]
