tests/defaultAddCapabilities/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: defaultaddcapabilities
spec:
  module: registry://ghcr.io/kubewarden/policies/capabilities-psp:v1.0.13
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      scope: "Namespaced"
      operations:
      - CREATE
      - UPDATE
  mutating: true
  settings:
    default_add_capabilities:
      - something
    allowed_capabilities:
      - something
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
