tests/defaultAddCapabilities/kyverno-helper.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-defaultaddcapabilitiescheck
spec:
  validationFailureAction: enforce
  rules:
  - name: psp-defaultaddcapabilitiescheck
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        fake
      pattern:
        spec:
          containers:
          - securityContext: null
