tests/defaultAddCapabilities/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-defaultaddcapabilities
spec:
  schemaValidation: false
  rules:
  - name: psp-defaultaddcapabilities
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchesJson6902: |-
        - op: add
          path: "/spec/securityContext/capabilities/add/-"
          value: something
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-defaultaddcapabilitiescheck
spec:
  validationFailureAction: enforce
  rules:
  - name: psp-defaultaddcapabilitiescheck
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        fake
      pattern:
        spec:
          containers:
          - securityContext: null
